# euler

./: .ghci  .gitignore  LICENSE  README.md  euler.cabal  stack.yaml
src/: Simple.hs  Solutions.hs
src/Euler/: P15.hs  P51.hs  P54.hs  P60.hs  P61.hs  P62.hs  P64_66.hs  P68.hs  P83.hs  P84.hs  Util.hs
