name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2018 Mariusz Ryndzionek
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Euler.Util
                       Euler.P15
                       Euler.P51
                       Euler.P54
                       Euler.P60
                       Euler.P61
                       Euler.P62
                       Euler.P64_66
                       Euler.P68
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers, data-fix, timeit, primes, split, mtl
  ghc-options:         -Wall

executable solutions
  hs-source-dirs:      src
  main-is:             Solutions.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers, split, data-fix, safe, transformers,
                       timeit, mtl, permutation, primes, array
  other-modules:       Euler.Util
                       Euler.P15
                       Euler.P51
                       Euler.P54
                       Euler.P60
                       Euler.P61
                       Euler.P62
                       Euler.P64_66
                       Euler.P68
